# agentkits

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini
agentkits/: __init__.py  _logging.py  exceptions.py  types.py
agentkits/agent/: __init__.py  _as_tool.py  _base.py  _classic_react.py  _handoff.py  _plan.py  _react.py  _reflexion.py  _rewoo.py  _self_refine.py
agentkits/message/: __init__.py  _chat_message.py  _content.py  _usage.py
agentkits/model/: __init__.py  _base.py  _claude_model.py  _openai_model.py  _openai_responses_model.py  _response.py
agentkits/session/: __init__.py  _base.py  _json.py  _memory.py  _sqlite.py
agentkits/tool/: __init__.py  _function.py  _response.py  _toolkit.py  _types.py
agentkits/tool/mcp/: __init__.py  _base.py  _http_client.py  _stdio_client.py
agentkits/tool/skill/: __init__.py  _skill.py
agentkits/utils/: __init__.py  _async.py  _docstring.py  _id.py  _json.py  _pattern.py  _retry.py  _schema.py
examples/: 01_quickstart.py  02_structured_output.py  03_pattern_schema.py  04_multi_agent.py  05_multi_agent_composition.py  06_plan_progress.py  07_handoff_demo.py  08_reproducible_demo.py  _shared.py
