[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentkits"
version = "0.1.0"
description = "A minimal agent kit with unified message / model / tool abstractions over OpenAI and Claude."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "agentkits" }]
dependencies = [
    "openai>=1.40.0",
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "shortuuid>=1.0",
    "typing-extensions>=4.8",
    "json-repair>=0.30",
    "docstring-parser>=0.16",
    "tenacity>=8.2",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0", "fastmcp>=2.0"]
dotenv = ["python-dotenv>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "python-dotenv>=1.0",
    "fastmcp>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agentkits"]

[tool.hatch.build.targets.sdist]
include = ["agentkits", "README.md", "pyproject.toml"]
